-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.5.0, 6.8.0
-
None
-
Android emulator and physical Android device, Qt 6.5.0, Android versions 8,9,10,12
-
-
1388e27db (dev), 0238a1014 (6.9), 615430595 (6.8)
-
2025wk02s3FOQtforAndroid
Camera Example is missing buttons in topbar on Android device and emulator in Android versions 10.0 -> newer. Android version 9.0 and older do not have this same issue.
docs: https://doc.qt.io/qt-6/qtmultimedia-camera-example.html
- relates to
-
QTBUG-109286 undoframework example missing top menu bar on device
-
- Reported
-
-
QTBUG-112997 Camera (Widgets) Example buttons stop working after pressing "Set metadata" button
-
- Closed
-
-
QTBUG-112998 Camera (Widgets) Example camera stops working if screen is turned off and back on while app running
-
- Closed
-
-
QTBUG-73904 Update Qt future release to use and support AndroidX libraries
-
- Blocked
-
- split to
-
QTBUG-132816
Update default Theme to Theme.AppCompat.DayNight (From AndroidX)
-
- Reported
-